add local map to program. debuging, now compile success. but segment fault when delete initializer. to do how does it do when using delete? maybe no delete needed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,11 @@ src/ORBextractor.cc
 src/ORBmatcher.cc
 src/Frame.cc
 src/Initializer.cc
+src/Map.cc
+src/MapPoint.cc
+src/KeyFrame.cc
+
+
 )
 
 target_link_libraries(${PROJECT_NAME}
